# downquark.templateNative.ApplicationTauri

./: .gitignore  README.md  SUPPORT.md  package.json  playwright.config.ts  tsconfig.json
_notes/: .gitkeep
devqon/: README.md  package.json  tsconfig.json
devqon/src-tauri/: Cargo.toml  tauri.conf.json
devqon/src-tauri/src/: lib.rs  main.rs
devqon/src-tauri/workspaces/enhancements/: Cargo.toml
devqon/src-tauri/workspaces/enhancements/src/: lib.rs  widgets.rs
devqon/src-tauri/workspaces/enhancements/src/mechanisms/: database.rs  file_system.rs
devqon/src-tauri/workspaces/enhancements/src/mechanisms/database/: arango.rs  maria.rs
devqon/src-tauri/workspaces/enhancements/src/mechanisms/database/arango/: .gitkeep  configure.rs  connect.rs  query.rs
devqon/src-tauri/workspaces/enhancements/src/mechanisms/database/maria/: configure.rs  connect.rs  query.rs
devqon/src-tauri/workspaces/enhancements/src/mechanisms/file_system/: navigate.rs  results.rs
devqon/src-tauri/workspaces/enhancements/src/widgets/: select.rs
devqon/src-tauri/workspaces/enhancements/src/widgets/input/: base.rs  text_area.rs
devqon/src-tauri/workspaces/enhancements/src/widgets/interactive/: drag_drop.rs
devqon/src-tauri/workspaces/utils/: Cargo.toml
devqon/src-tauri/workspaces/utils/src/: constants.rs  helpers.rs  lib.rs  logging.rs
devqon/src-tauri/workspaces/utils/src/constants/: enumerate.rs
devqon/src-tauri/workspaces/utils/src/helpers/: build.rs  commands.rs  standards.rs  state.rs  tray.rs
devqon/src-tauri/workspaces/utils/src/helpers/commands/: .gitkeep  _devqon.rs
devqon/src-tauri/workspaces/utils/src/helpers/standards/: time.rs
devqon/src-tauri/workspaces/utils/src/helpers/state/: .gitkeep  _devqon.rs
devqon/src-ui/: index.html
devqon/src-ui/components/: developer-qonsole.ts  simple-greeting.ts
devqon/src-ui/components/layout/: field.ts  region.ts  zone.ts
devqon/src-ui/scripts/: devqon.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/_downquark/: icon.icns
tauri/src-tauri/src/: main.rs
tauri/src-tauri/workspaces/enhancements/src/: mechanisms.rs
tauri/src-tauri/workspaces/enhancements/src/mechanisms/: database.rs
tauri/src-tauri/workspaces/enhancements/src/mechanisms/database/: configure.rs  connect.rs  query.rs
tauri/src-tauri/workspaces/enhancements/src/widgets/: input.rs  interactive.rs
tauri/src-tauri/workspaces/enhancements/src/widgets/select/: option.rs
tauri/src-tauri/workspaces/utils/: Cargo.toml
tauri/src-tauri/workspaces/utils/src/: helpers.rs  hooks.rs  lib.rs  logging.rs
tauri/src-tauri/workspaces/utils/src/helpers/: build.rs  system_tray.rs
tauri/src-tauri/workspaces/utils/src/hooks/: todo.rs
tauri/src-tauri/workspaces/utils/src/logging/: todo.rs
tauri/src-ui/: splash.html
tauri/src-ui/assets/styles/: devqon.scss
tauri/src-ui/components/: developer-qonsole.ts
tauri/src-ui/components/layout/: sector.ts
tauri/src-ui/scripts/: devqon.ts
tauri/ui/: index.html
tauri/ui/assets/styles/: devqon.scss
tauri/ui/scripts/types/: devqon.d.ts
