[workspace]
resolver = "2"
members = [
    "./workspaces/enhancements",
    "./workspaces/utils"
]
[workspace.package]
version = "0.0.3-pre-release"
edition = "2021"
authors = ["downquark <development.qonsole@downquark.work>"]

[package]
name = "devqon"
version = "0.0.3-pre-release"
description = "DownQuark Development Qonsole"
authors = ["downquark <development.qonsole@downquark.work>"]
license = "GNU"
repository = ""
default-run = "devqon"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [
    "icon-ico",
    "system-tray"
] }
# workspace dependencies
enhancements = { path = "./workspaces/enhancements" }
utils = { path = "./workspaces/utils" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
